--- a/tictactoe/public/index.html
+++ b/tictactoe/public/index.html
@@ -62,6 +62,8 @@
       -webkit-font-smoothing: antialiased;
     }
     
+    [x-cloak] { display: none !important; }
+    
     .nasa-bracket {
       position: relative;
     }
@@ -327,11 +329,11 @@
   <canvas id="fw-canvas" style="position:fixed;inset:0;pointer-events:none;z-index:99"></canvas>
   
   <!-- Home/Landing Screen -->
-  <div x-show="screen === 'home'" class="content-layer min-h-screen flex items-center justify-center p-4 sm:p-6">
+  <div x-show="screen === 'home'" x-transition class="content-layer min-h-screen flex items-center justify-center p-4 sm:p-6">
     <div class="max-w-4xl w-full text-center">
-      <div class="mb-6 sm:mb-8 animate-pulse">
-        <div class="text-nasa text-xs sm:text-sm tracking-widest mb-3 sm:mb-4">◆ MISSION CONTROL ◆</div>
-        <h1 class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-bold tracking-wider mb-3 sm:mb-4 text-transparent bg-clip-text bg-gradient-to-r from-nasa via-earth to-mars px-2">
+      <div class="mb-6 sm:mb-8">
+        <div class="text-nasa text-xs sm:text-sm tracking-widest mb-3 sm:mb-4 animate-pulse">◆ MISSION CONTROL ◆</div>
+        <h1 class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-bold tracking-wider mb-3 sm:mb-4 px-2" style="background: linear-gradient(to right, #00d4ff, #4dffdb, #ff6b35); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; color: #00d4ff;">
           TIC TAC TOE
         </h1>
         <p class="text-lg sm:text-xl md:text-2xl text-gray-300 tracking-wide mb-2 px-2">TACTICAL GRID COMBAT SYSTEM</p>
